--- a/datasets/data_configs.yaml
+++ b/datasets/data_configs.yaml
@@ -1,5 +1,6 @@
 mvtec:
   datadir: "/DATA/Users/amahmood/GDrive/MVTec_AD/"
-  shape: 64, 64, 3
+  shape: 64, 64, 3   # Shape for training after crop
+  downsample: 96, 96, 3  # Shape after downsampling (before crop)
   batch_size: 32
 
