DGMM script now runs + added lowres mvtec config

--- a/datasets/data_configs.yaml
+++ b/datasets/data_configs.yaml
@@ -5,3 +5,9 @@ mvtec:
   downsample: 256, 256, 3  # Shape after downsampling (before crop)
   batch_size: 32
 
+mvtec_lowres:
+  datadir: "/DATA/Users/amahmood/GDrive/MVTec_AD/"
+  datadir_gdrive: "/content/drive/MyDrive/ML_Datasets/MvTec_AD/"
+  downsample: 96, 96, 3
+  shape: 64, 64, 3
+  batch_size: 32
