--- a/datasets/data_configs.yaml
+++ b/datasets/data_configs.yaml
@@ -18,6 +18,8 @@ mvtec_lowres:
   batch_size: 32
 
 knee:
+  datadir: "/home/PO3D/raw_data/knee/"
+  datadir_longleaf: "/nas/longleaf/home/amahmood/mypine/DATA/knee"
   shape: 128, 128, 1
   downsample: 64, 64, 1
   n_samples: 16690
