--- a/datasets/data_configs.yaml
+++ b/datasets/data_configs.yaml
@@ -1,12 +1,12 @@
 mnist:
-  shape: 28, 28, 1
+  image_size: 28, 28, 1
   batch_size: 32
   n_samples: 60000
 
 mvtec:
   datadir: "/DATA/Users/amahmood/GDrive/MVTec_AD/"
   datadir_gdrive: "/content/drive/MyDrive/ML_Datasets/MvTec_AD/"
-  shape: 128, 128, 3   # Shape for training after crop
+  image_size: 128, 128, 3   # Shape for training after crop
   downsample: 256, 256, 3  # Shape after downsampling (before crop)
   batch_size: 32
 
@@ -14,18 +14,19 @@ mvtec_lowres:
   datadir: "/DATA/Users/amahmood/GDrive/MVTec_AD/"
   datadir_gdrive: "/content/drive/MyDrive/ML_Datasets/MvTec_AD/"
   downsample: 96, 96, 3
-  shape: 64, 64, 3
+  image_size: 64, 64, 3
   batch_size: 32
 
 knee:
   datadir: "/home/PO3D/raw_data/knee/"
   datadir_longleaf: "/nas/longleaf/home/amahmood/mypine/DATA/knee"
   image_size: 220, 160, 1
-  shape: 110, 80, 1
+  downsample_size: 110, 80, 1
   n_samples: 16690
 
-knee_highres:
+knee_complex:
   datadir: "/home/PO3D/raw_data/knee/"
   datadir_longleaf: "/nas/longleaf/home/amahmood/mypine/DATA/knee"
-  shape: 128, 128, 1
+  image_size: 220, 160, 2
+  downsample_size: 110, 80, 2
   n_samples: 16690
